# LA-BENCH-2025

./: PROBLEM.md  pyproject.toml  test_responses_api.py
.github/: copilot-instructions.md
data/: example.jsonl
docs/: PROBLEMS.md  REQUIREMENTS.md  gemini_thoughts.md  type-checker.md
docs/legacy/: requirements-definition.md  workflow_consolidation.md
outputs/runs/: eval_llm_20251119_082022.csv  eval_responses_20251119_082242.csv  generated_20251119_082022.jsonl  generated_responses_20251119_082242.jsonl  skeleton_output.jsonl
src/: main.py
src/agents/: agent_with_dag_validation.py  dag_validator.py  prompts.py  simple_parser.py  test_dag_validator.py
src/single-prompt/: baseline-gpt5.1.py  baseline-gpt5.py  baseline.ipynb  baseline.py  baseline_responses_api.ipynb  baseline_responses_api.py
src/tools/: fetch_url.py
